applications/openeuler-datastat/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: opendesign-datapertus
  name: opendesign-datapertus
