applications/openeuler-datastat/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: opendesign-datapertus-openeuler-ingress
  namespace: opendesign-datapertus
spec:
  tls:
    - hosts:
        - datastat.openeuler.org
      secretName: datastat-openeuler-tls
  rules:
    - host: datastat.openeuler.org
      http:
        paths:
          - backend:
              serviceName: openeuler-service
              servicePort: 80
            path: /
